; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/regex/extr_regc_nfa.c_freecnfa.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/regex/extr_regc_nfa.c_freecnfa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cnfa = type { i64, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cnfa*)* @freecnfa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @freecnfa(%struct.cnfa* %0) #0 {
  %2 = alloca %struct.cnfa*, align 8
  store %struct.cnfa* %0, %struct.cnfa** %2, align 8
  %3 = load %struct.cnfa*, %struct.cnfa** %2, align 8
  %4 = getelementptr inbounds %struct.cnfa, %struct.cnfa* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  %7 = zext i1 %6 to i32
  %8 = call i32 @assert(i32 %7)
  %9 = load %struct.cnfa*, %struct.cnfa** %2, align 8
  %10 = getelementptr inbounds %struct.cnfa, %struct.cnfa* %9, i32 0, i32 0
  store i64 0, i64* %10, align 8
  %11 = load %struct.cnfa*, %struct.cnfa** %2, align 8
  %12 = getelementptr inbounds %struct.cnfa, %struct.cnfa* %11, i32 0, i32 3
  %13 = load i32, i32* %12, align 8
  %14 = call i32 @FREE(i32 %13)
  %15 = load %struct.cnfa*, %struct.cnfa** %2, align 8
  %16 = getelementptr inbounds %struct.cnfa, %struct.cnfa* %15, i32 0, i32 2
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @FREE(i32 %17)
  %19 = load %struct.cnfa*, %struct.cnfa** %2, align 8
  %20 = getelementptr inbounds %struct.cnfa, %struct.cnfa* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 8
  %22 = call i32 @FREE(i32 %21)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @FREE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
